tests/snapshots/dot_repeat_test__dot_repeat_O_command.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:5
Lines: 3

Buffer:
new
linew[n]e 1
line 2
