tests/snapshots/dot_repeat_test__dot_repeat_append.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:2
Lines: 2

Buffer:
h!ello
w![o]rld
