tests/snapshots/dot_repeat_test__dot_repeat_c_dollar.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:5
Lines: 2

Buffer:
NEW
teNEW[s]t case
