tests/snapshots/dot_repeat_test__dot_repeat_change_word.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:6
Lines: 1

Buffer:
Xtwo X[t]hree
