tests/snapshots/dot_repeat_test__dot_repeat_ci_quote.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
"hello" and ["]world"
