tests/snapshots/dot_repeat_test__dot_repeat_complex_change.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:8
Lines: 3

Buffer:
REPLACEDtwo
three four
REPLACED[f]ive six
