tests/snapshots/dot_repeat_test__dot_repeat_counted_insert.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:1
Lines: 1

Buffer:
X[X]line
