tests/snapshots/dot_repeat_test__dot_repeat_cw_at_different_word_lengths.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:9
Lines: 1

Buffer:
Xreally X[l]ong short
