tests/snapshots/dot_repeat_test__dot_repeat_d_dollar.snap
---
source: tests/dot_repeat_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:

[ ]
